# Savages-Online

./: .gitignore  CMakeLists.txt  Makefile  README.md  vscode.code-workspace
logs/: Compilation_log.txt  compilation.txt
resources/Maps/Main-Town/v1/: Main-Town.txt
resources/Maps/Main-Town/v2/: Main-Town.tmx
server/: app.js  package-lock.json  package.json  secrets.js
server/models/: Player.js
server/routes/: api.js  index.js
src/: api.cpp  api.hpp  main.cpp  main.hpp
src/Game/: Game.cpp  Game.hpp
src/Game/Component/Button/: Button.hpp
src/Game/Component/PopUpMenu/: PopUpMenu.cpp  PopUpMenu.hpp
src/Game/Entity/Player/: Player.cpp  Player.hpp
src/Game/Map/: Map.cpp  Map.hpp
src/Game/Screen/: Screen.cpp  Screen.hpp
src/Game/Screen/ButtonComponent/: Button.cpp  Button.hpp
src/Game/Screen/CreditsScreen/: CreditsScreen.cpp  CreditsScreen.hpp
src/Game/Screen/InGameScreen/: InGameScreen.cpp  InGameScreen.hpp
src/Game/Screen/LoadingScreen/: LoadingScreen.cpp  LoadingScreen.hpp
src/Game/Screen/LoginScreen/: LoginScreen.cpp  LoginScreen.hpp
src/Game/Screen/MainMenuScreen/: MainMenuScreen.cpp  MainMenuScreen.hpp
src/Game/Screen/RegisterScreen/: RegisterScreen.cpp  RegisterScreen.hpp
src/Main/: main.cpp  main.hpp
src/Screen/: Screen.cpp  Screen.hpp
src/Screen/CreditsScreen/: CreditsScreen.cpp  CreditsScreen.hpp
src/Screen/GameScreen/: GameScreen.hpp
